--- a/src/main/resources/messages/message.properties
+++ b/src/main/resources/messages/message.properties
@@ -1,18 +1,9 @@
-required.prodotto.nome=Name is a mandatory field
-required.prodotto.descrizione=Description is a mandatory field
-duplicato=This product already exists
-header.prodotto=Product details
-header.prodotti=List of products
-header.index=Welcome
-title.prodotto=Product details
-title.prodotti=List of products
-title.formProduct=Insert product
-pageTitle.product=Produce Page
-index.login=Login
-index.register=Sign in
-header.registra=Signing in
-header.menuUtente=User Menu
-header.menuAdmin=Admin Menu
+required.buffet.nome=Name is a mandatory field
+duplicato=This buffet already exists
+#
+required.chef.nome=Name is a mandatory field
+required.chef.cognome=Surname is a mandatory field
+duplicato=This chef already exists
 #
 required.user.nome=First name is a mandatory field
 required.user.cognome=Last name is a mandatory field
@@ -21,5 +12,5 @@ required.credentials.password=Password is a mandatory field
 size.user.nome=First name must be between 2 and 100 characters long
 size.user.cognome=Last name must be between 2 and 100 characters long
 size.credentials.username=Username must be between 4 and 20 characters long
-size.credentials.password=Password must be between 6 and 20 characters long
+size.credentials.password=Password must be between 4 and 20 characters long
 duplicate.credentials.username=This username is already taken
