--- a/src/main/resources/messages/message.properties
+++ b/src/main/resources/messages/message.properties
@@ -5,6 +5,12 @@ required.chef.nome=Name is a mandatory field
 required.chef.cognome=Surname is a mandatory field
 duplicato=This chef already exists
 #
+required.course.nome=Name is a mandatory field
+duplicato=This course already exists
+#
+required.ingredient.nome=Name is a mandatory field
+duplicato=This ingredient already exists
+#
 required.user.nome=First name is a mandatory field
 required.user.cognome=Last name is a mandatory field
 required.credentials.username=Username is a mandatory field
