--- a/src/main/resources/messages/message.properties
+++ b/src/main/resources/messages/message.properties
@@ -1,8 +1,8 @@
 required.buffet.nome=Name is a mandatory field
 duplicato=This buffet already exists
 #
-required.chef.nome=Name is a mandatory field
-required.chef.cognome=Surname is a mandatory field
+NotBlank.chef.nome=Name is a mandatory field
+NotBlank.chef.cognome=Surname is a mandatory field
 duplicato=This chef already exists
 #
 required.course.nome=Name is a mandatory field
