--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,4 +31,5 @@ spring.thymeleaf.encoding=UTF-8
 #==================================
 # = Messages configuration
 #==================================
-spring.messages.basename=messages/messagesspring.messages.encoding=ISO-8859-1
+spring.messages.basename=messages/messages
+spring.messages.encoding=ISO-8859-1
